{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 22,
  "lineage": "be21a2b5-b484-a021-ec85-7bd7de4c1609",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03953347dc1ba0041",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-219-138-69.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.138.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "Network": "NAT",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "Network": "NAT",
              "Workspace": "default"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:440766640997:internet-gateway/igw-0763e76c5ca3d204e",
            "id": "igw-0763e76c5ca3d204e",
            "owner_id": "440766640997",
            "tags": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "Workspace": "default"
            },
            "vpc_id": "vpc-01c49cf9c1043c4cf"
          },
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03953347dc1ba0041",
            "id": "nat-074ff54111c35589b",
            "network_interface_id": "eni-065c006e00cf4ca7a",
            "private_ip": "10.0.2.186",
            "public_ip": "18.219.138.69",
            "subnet_id": "subnet-09c0d9aaf94677d6e",
            "tags": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "Workspace": "default"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00e2184370f498d911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-074ff54111c35589b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e2184370f498d91",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0763e76c5ca3d204e",
            "id": "r-rtb-034b0bbcea6acc7641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-034b0bbcea6acc764",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:440766640997:route-table/rtb-00e2184370f498d91",
            "id": "rtb-00e2184370f498d91",
            "owner_id": "440766640997",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "vpc_id": "vpc-01c49cf9c1043c4cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:440766640997:route-table/rtb-034b0bbcea6acc764",
            "id": "rtb-034b0bbcea6acc764",
            "owner_id": "440766640997",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "vpc_id": "vpc-01c49cf9c1043c4cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d997e146c77bb96",
            "route_table_id": "rtb-00e2184370f498d91",
            "subnet_id": "subnet-034b44b954fde4e00"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082ebf846389b0104",
            "route_table_id": "rtb-00e2184370f498d91",
            "subnet_id": "subnet-081a3f32a5c75d646"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c569c93f57aa374e",
            "route_table_id": "rtb-034b0bbcea6acc764",
            "subnet_id": "subnet-09c0d9aaf94677d6e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5167f0c7f4c68d0",
            "route_table_id": "rtb-034b0bbcea6acc764",
            "subnet_id": "subnet-02b54f26f69a89600"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:440766640997:subnet/subnet-034b44b954fde4e00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-034b44b954fde4e00",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440766640997",
            "tags": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "vpc_id": "vpc-01c49cf9c1043c4cf"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:440766640997:subnet/subnet-081a3f32a5c75d646",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-081a3f32a5c75d646",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440766640997",
            "tags": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "Network": "NAT",
              "SubnetType": "private",
              "Workspace": "default"
            },
            "vpc_id": "vpc-01c49cf9c1043c4cf"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:440766640997:subnet/subnet-09c0d9aaf94677d6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-09c0d9aaf94677d6e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440766640997",
            "tags": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "vpc_id": "vpc-01c49cf9c1043c4cf"
          },
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:440766640997:subnet/subnet-02b54f26f69a89600",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-02b54f26f69a89600",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440766640997",
            "tags": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "SubnetType": "public",
              "Workspace": "default"
            },
            "vpc_id": "vpc-01c49cf9c1043c4cf"
          },
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:440766640997:vpc/vpc-01c49cf9c1043c4cf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eeaef81748ebfb0e",
            "default_route_table_id": "rtb-03e2941777df5c914",
            "default_security_group_id": "sg-005204361109c6a11",
            "dhcp_options_id": "dopt-b1f395da",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01c49cf9c1043c4cf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03e2941777df5c914",
            "owner_id": "440766640997",
            "tags": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "Workspace": "default"
            },
            "tags_all": {
              "Module": ".",
              "Name": "terraform-aws-vpc-public-private",
              "Workspace": "default"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}